--- a/examples/js/package.json
+++ b/examples/js/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "author": "Miro Kokkonen",
   "license": "MIT",
-  "dependencies": {
+  "@comment dependencies": {
     "lodash": "4.17.4"
   }
 }
